--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "light-bootstrap-dashboard-pro-react",
+    "name": "ReactAdmin",
     "version": "1.0.0",
     "private": true,
     "dependencies": {
